--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Hamilton
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
 author: Shangzhi Huang
 avatar: /logo.png
-email: ngzhio@gmail.com
+email: wjdrms7169@gmail.com
 
 plugins:
   - jekyll-seo-tag
@@ -34,7 +34,7 @@ twitter:
   card: summary
 logo: logo.png
 social:
-  name: Shangzhi Huang
+  name: dmridmrir
   links:
     - https://twitter.com/ngzhio
     - https://www.facebook.com/ngzhio
