--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Hamilton
+title: dmridmrir
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
+author: seo jeong geun
 avatar: /logo.png
 email: wjdrms7169@gmail.com
 
