--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: dmridmrir
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
+description: PKNU lecture
 author: seo jeong geun
 avatar: /logo.png
 email: wjdrms7169@gmail.com
