--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: dmridmrir
 description: PKNU lecture
 author: seo jeong geun
-avatar: /logo.png
+avatar: /나.jpg
 email: wjdrms7169@gmail.com
 
 plugins:
